Remove `NtadTest` dependency from BPC algorithm: refactor `Bpc`, `BpcBlockDiscoverer`, and `BlockDiscoverers` classes; update method signatures, clustering logic, and tests; adjust impacted UI components in `BlockClusteringWizard`.